# coessentiality

./: README.md  cancer_type_dependencies.py  clusterOne_clusters.tsv  diffmap.py  gene_pairs.py  generate_layout.py  load_screens.py  olfactory_genes.txt  setup.cfg  vizdf.tsv
src/coessentiality/: __init__.py  cancer_type_dependencies.py  gene_pairs.py  modules.py
