##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = coessentiality
version = 0.0.1-dev
description =  Generate co-essential gene pairs, co-essential modules, and modules with cancer type-specific dependencies.
long_description = file: README.md
long_description_content_type = text/markdown

# License information
license = MIT
license_file = LICENSE


[options]
install_requires =
    scipy
    statsmodels
    numpy
    pandas
    sklearn

zip_safe = false
include_package_data = True
python_requires = >=3.7

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src
